--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ serde_json = "1.0.51"
 [dependencies.deathframe]
 version = "*"
 git = "https://github.com/Noah2610/deathframe"
-branch = "develop"
+branch = "develop-ld46"
 features = [
     "animation",
     "audio",
