Add TriggerReactiveAnimation component, add UpdateReactiveAnimationsSystem, register new AnimationsBundle for reactive animations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ld46"
 version = "0.0.0"
-authors = []
+authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
 edition = "2018"
 
 [dependencies]
